--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.hero{
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+}
+img{
+	width:250%;
+	height:250px;
+	object-fit:cover;
+}
+button{
+	padding:3px;
+	background-color:red;
+	border-radius:3px;
+}
